--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -336,6 +336,7 @@
                                             <a><i class="fa fa-chart-gantt"></i>Forecast <span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "budget_forecast" ? "display:block" : null )">
                                                 <li class="@(ViewBag.SegundoNivel == "listado_forecast" ? "current-page" : null )"><a href="@Url.Action( "index", "BG_Forecast_reporte")">Forecast</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "reporte_forecast" ? "current-page" : null )"><a href="@Url.Action( "GenerarReporte", "BG_Forecast_reporte")">Reporte</a></li>
                                                 @*@if (User.IsInRole(TipoRoles.BUDGET_IHS_CATALOGOS))
                                                 {
                                                     <li class="link @(ViewBag.SegundoNivel == "budget_ihs_catalogos" ? "active" : null )">
