--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/Index.cshtml
@@ -14,6 +14,7 @@
     Portal_2_0.Models.Paginacion paginacionFiltros = (Portal_2_0.Models.Paginacion)ViewBag.Paginacion;
 
 
+
     //string demanda = String.Empty;
 
     //if (paginacionFiltros.ValoresQueryString["demanda"] != null)
@@ -32,8 +33,7 @@
 
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
-    <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
-
+    <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">    
 }
 
 @*Para SweetAlert*@
@@ -42,7 +42,6 @@
     <input type="hidden" value="@mensajeAlerta.Mensaje" id="mensajeAlert" />
     <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
-
 
 <div class="right_col" role="main">
     <div class="">
@@ -143,22 +142,28 @@
                                                                     }
                                                                 </td>
                                                                 <td>
-                                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
+                                                                    <a href="@Url.Action("EditarReporte", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btn-sm" title="Editar">
                                                                         <i class="fa-regular fa-pen-to-square"></i>
                                                                     </a>
-                                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
+                                                                     <a href="@Url.Action("EditarAsociacionIHS", ViewBag.ControllerName, new { id = item.id})" class="btn btn-primary btn-sm" title="Editar Asociaciones">
+                                                                         <i class="fa-solid fa-tags"></i>
+                                                                    </a>
+                                                                      <a href="@Url.Action("ReemplazarReporte", ViewBag.ControllerName, new { id = item.id})" class="btn btn-warning btn-sm" title="Reemplazar">
+                                                                          <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                                                    </a>
+                                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-secondary btn-sm" title="Detalles">
                                                                         <i class="fa fa-info-circle"></i>
                                                                     </a>
 
                                                                     @if (!item.activo)
                                                                     {
-                                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
+                                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" s title="Habilitar">
                                                                             <i class="fa fa-unlock"></i>
                                                                         </a>
                                                                     }
                                                                     else
                                                                     {
-                                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Deshabilitar">
+                                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger btn-sm" title="Deshabilitar">
                                                                             <i class="fa fa-lock"></i>
                                                                         </a>
                                                                     }
@@ -235,6 +240,7 @@
         window.onload = function () {
             clicMenu(2); //dos veces para acomodar la tabla
         }
+
 
 
     </script>
