--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/GenerarReporte.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/GenerarReporte.cshtml
@@ -35,7 +35,7 @@
                             <span style="color:black"><b>DATOS GENERALES</b></span>
                         </div>
                         <div class="ln_solid"></div>
-                        @using (Html.BeginForm(null, null, FormMethod.Post, new { @class = "form-horizontal form-label-left", @id="my-form" }))
+                        @using (Html.BeginForm(null, null, FormMethod.Post, new { @class = "form-horizontal form-label-left", @id="my-form", @target = "_blank" }))
                         {
                             @Html.AntiForgeryToken()
 
@@ -70,12 +70,12 @@
                         }
                     </div>
                 </div>
-                <div>
+                @*<div>
                     <br />
                     <a href="@Url.Action("Index", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Volver">
                         <i class="fa fa-arrow-circle-left"></i> Volver al listado
                     </a>
-                </div>
+                </div>*@
             </div>
         </div>
     </div>
