--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -285,7 +285,7 @@
                                                 @if (User.IsInRole(TipoRoles.GV_SOLICITUD))
                                                 {
                                                     <h3>SOLICITUDES</h3>
-                                                    <li class="@(ViewBag.SegundoNivel == "GV_solicitud" ? "current-page" : null )"><a href="@Url.Action( "Solicitudes", "GV_solicitud")">Mis Solicitudes</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "GV_solicitud" ? "current-page" : null )"><a href="@Url.Action( "Solicitudes", "GV_solicitud")">En proceso</a></li>
                                                 }
                                                 @if (User.IsInRole(TipoRoles.GV_JEFE_DIRECTO))
                                                 {
